# ouli

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md
benches/: binary_format.rs  fingerprint.rs  record_replay.rs
docs/: IMPLEMENTATION_ROADMAP.md  SUMMARY.md
docs/rfc/: 001-architecture.md  002-binary-format.md  003-request-fingerprinting.md  004-network-handler.md  005-recording-engine.md  006-replay-engine.md  007-security-redaction.md  008-performance.md  009-testing.md  010-sdk-design.md  README.md
src/: config.rs  error.rs  fingerprint.rs  lib.rs  main.rs
src/network/: client.rs  connection_pool.rs  handler.rs  http.rs  mod.rs  websocket.rs
src/proxy/: http.rs  mod.rs  websocket.rs
src/recording/: engine.rs  mod.rs  session.rs
src/replay/: cache.rs  engine.rs  mod.rs
src/storage/: format.rs  mod.rs  reader.rs  writer.rs
tests/: integration_test.rs
