[package]
name = "ouli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["Ouli Contributors"]
license = "Apache-2.0"
description = "High-performance HTTP/WebSocket record-replay proxy"
repository = "https://github.com/copyleftdev/ouli"
keywords = ["http", "websocket", "testing", "proxy", "record-replay"]
categories = ["development-tools::testing", "network-programming"]

[dependencies]
# Core
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Cryptography
sha2 = "0.10"
crc32fast = "1.4"

# Memory mapping
memmap2 = "0.9"

# Zero-copy
bytemuck = { version = "1.14", features = ["derive"] }
bytes = "1.5"

# Collections
dashmap = "5.5"

# Static assertions
static_assertions = "1.1"

# Async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "time", "sync", "macros", "signal"] }

# HTTP
hyper = { version = "1.5", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "client-legacy"] }
http-body-util = "0.1"

# WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "fingerprint"
harness = false

[[bench]]
name = "binary_format"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
